update Dockerfile and script files